# Hackathon-2025

./: README.md
big_blue/: Cargo.toml
big_blue/Hackathon_2025_Frontend_vsc/: backend.js  index.html  landing.html  login.html  plans.html  register.html  rewards.html  style.css
big_blue/src/: lib.rs
big_blue_server/src/: lib.rs  main.rs
invest_quest_server/: Cargo.toml
invest_quest_server/src/: lib.rs  main.rs
invest_quest_server/src/rewards/: mod.rs
web/: 404.html  backend.js  index.html  landing.html  login.html  plans.html  register.html  rewards.html  rewards_data.json  style.css
