[package]
name = "invest_quest_server"
version = "0.1.0"
edition = "2021"

[dependencies]
httpdate = "1.0.3"
rand = "0.9.0"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
